# RayTracer

./: CMakeLists.txt  README.md  RayTracer.pro
cmake/: FindGLFW3.cmake
exe/: imgui.ini  out
include/: error.h  root_dir.h  root_dir.h.in  test.h
include/app/: Application.h
include/core/: Profiler.h  Random.h  core.h  debug.h  parallel.h  types.h
include/image/: Colour.h  Image.h  Texture.h
include/math/: Matrix4.h  Quaternion.h  Thomath.h  Transform.h  Vector2.h  Vector3.h  Vector4.h  Vectors.h  constants.h  routines.h  thomath.h
include/model/: Material.h  Model.h  OBJLoader.h  Primitives.h
include/raytracer/: Ray.h  RayTracer.h  Surfel.h
include/render/: Camera.h  Framebuffer.h  Material.h  Mesh.h  Primitives.h  Shader.h  Texture.h
include/render/bounds/: AABB.h  KDOP.h  LinearBVH.h  OBB.h
include/render/materials/: Dielectric.h  Diffuse.h  DiffuseLight.h  Lambertian.h  Material.h  Metal.h  Mixture.h  TexturedLambertian.h  materials.h
include/render/primitives/: BVH.h  GeometricPrimitive.h  Mesh.h  Primitive.h  Primitives.h  Quad.h  TriangleMesh.h
include/render/raytracer/: BVH.h  GeometricPrimitive.h  Primitive.h  Ray.h  RayTracer.h  Surfel.h  UniformSampler.h  sample.h
include/render/shapes/: Capsule.h  Cube.h  Cylinder.h  GLShapes.h  Quad.h  Shape.h  Sphere.h  Triangle.h
include/resource/: MaterialLoader.h  MemoryArena.h  OBJLoader.h  ResourceManager.h  SceneLoader.h  TextureLoader.h  buffer.h  file.h
include/scene/: Geometry.h  Model.h  Node.h  Primitive.h  Scene.h  Transform.h
include/widgets/: ArcBall.h  OpenGLWidget.h  RayTracerWidget.h  RenderOptionsWidget.h  RenderWidget.h  UserInterface.h  VectorWidget.h  Window.h
include/window/: ArcBall.h  OpenGLWidget.h  RayTracerWidget.h  RaytracerWidget.h  RenderOptionsWidget.h  RenderWidgets.h  VectorWidget.h  Window.h
materials/: boombox.mtl  chair.mtl  clone.mtl  container.mtl  cornellbox.mtl  diffuse.mtl  earth.mtl  glass.mtl  light.mtl  metal.mtl  rustediron.mtl  table.mtl
models/: CornellBox.mtl  Triangles.mtl  chair.mtl  table.mtl  teapot.mtl
scenes/: bar.scene  clone.scene  clonehelmet.scene  cornellbox.scene  cornellteapot.scene  desktop.scene  sphere.scene  sword.scene  teapot.scene  testSphere.scene  test_sphere.scene  triangle.scene
screenshots/: correctUVs.ppm  grayCornellBox.ppm  pointLightShadows.ppm
shaders/: composition.frag  composition.vert  debug.frag  debug.vert  fs.frag  vs.vert
src/: main.cpp
src/app/: Application.cpp
src/core/: Profiler.cpp
src/image/: Image.cpp  Texture.cpp
src/math/: Matrix4.cpp  Quaternion.cpp  Transform.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/model/: Model.cpp  OBJLoader.cpp  Primitives.cpp
src/raytracer/: RayTracer.cpp  Raytracer.cpp
src/render/: Camera.cpp  Framebuffer.cpp  Material.cpp  Mesh.cpp  Primitives.cpp  Shader.cpp  Texture.cpp
src/render/bounds/: AABB.cpp  LinearBVH.cpp
src/render/primitives/: BVH.cpp  GeometricPrimitive.cpp  Mesh.cpp
src/render/raytracer/: BVH.cpp  Ray.cpp  RayTracer.cpp  UniformSampler.cpp  sample.cpp
src/resource/: MaterialLoader.cpp  MemoryArena.cpp  OBJLoader.cpp  ResourceManager.cpp  SceneLoader.cpp  TextureLoader.cpp
src/ressource/: OBJLoader.cpp  ResourceManager.cpp  SceneLoader.cpp  TextureLoader.cpp
src/scene/: Model.cpp  Node.cpp  Primitive.cpp  Scene.cpp  Transform.cpp
src/shaders/: debug.vert  fs.frag  vs.vert
src/widgets/: ArcBall.cpp  OpenGLWidget.cpp  RayTracerWidget.cpp  RenderOptionsWidget.cpp  RenderWidget.cpp  UserInterface.cpp  VectorWidget.cpp  Window.cpp
src/window/: ArcBall.cpp  OpenGLWidget.cpp  RayTracerWidget.cpp  RenderOptionsWidget.cpp  RenderWidgets.cpp  VectorWidget.cpp  Window.cpp
